--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -15,7 +15,8 @@
     gap:20px;
     padding-left: 180px;
     line-height: 1.1;
-    margin-left: 100px;
+    margin-left: -50px;
+    margin-top: 50px;
 }
 .hero-left h2{
    color: #090909;
@@ -56,4 +57,103 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
+    margin-right: 100px;
+}
+
+@media (max-width:1280px){
+    .hero-left{
+        padding-left: 0px;
+    }
+    .hero-left h2{
+        font-size: 22px;
+    }
+    .hero-left p{
+        font-size: 60px;
+    }
+    .hero-hand-icon img{
+        width: 80px;
+    }
+    .hero-latest-btn{
+        gap: 10px;
+        width: 250px;
+        height: 60px;
+        margin-top: 20px;
+        font-size: 18px;
+    }
+    .hero-right img{
+        width: 500px;
+    }
+}
+
+@media (max-width:1024px){
+    .hero-left{
+        padding-left: 0px;
+    }
+    .hero-left h2{
+        font-size: 20px;
+    }
+    .hero-left p{
+        font-size: 50px;
+    }
+    .hero-hand-icon img{
+        width: 65px;
+    }
+    .hero-latest-btn{
+     
+        width: 220px;
+        height: 50px;
+        font-size: 16px;
+    }
+    .hero-right img{
+        width: 400px;
+    }
+}
+@media (max-width:800px){
+    .hero-left{
+        padding-left: 0px;
+        margin-left: -80px;
+    }
+    .hero-left h2{
+        font-size: 20px;
+    }
+    .hero-left p{
+        font-size: 40px;
+    }
+    .hero-hand-icon img{
+        width: 50px;
+    }
+    .hero-latest-btn{
+        width: 175px;
+        height: 40px;
+        font-size: 13px;
+    }
+    .hero-right img{
+        width: 300px;
+        margin-right: 50px;
+    }
+}
+@media (max-width:500px) {
+    .hero{
+        flex-direction: column;
+    }
+    .hero-right{
+        display: none;
+    }
+    .hero-left h2{
+        font-size: 18px;
+    }
+    .hero-left p{
+        font-size: 50px;
+    }
+    .hero-hand-icon img{
+        width: 55px;
+    }
+    .hero-latest-btn{
+        width: 200px;
+        height: 45px;
+        font-size: 14px;
+        
+    }
+    
 }
