--- a/src/Components/Offers/Offers.css
+++ b/src/Components/Offers/Offers.css
@@ -18,7 +18,6 @@
     color: #171717;
     font-size: 80px;
     font-weight: 600;
-
 }
 .offers-left p{
     text-transform: uppercase;
@@ -44,4 +43,104 @@
     align-items: center;
     justify-content: center;
     padding-top: 50px;
+}
+
+@media (max-width:1280px) {
+    .offers{
+        padding: 0px 80px;
+        margin-bottom: 120px;
+    }
+    .offers-left{
+        padding-bottom: 200px;
+    }
+    .offers-left h1{
+        font-size: 40px;
+    }
+    .offers-left p{
+        font-size: 18px;
+    }
+    .offers-right img{
+        width: 300px;
+    }
+    .offers-left button{
+        width: 220px;
+        height: 50px;
+        font-size: 18px;
+    }
+    .offers-right{
+        padding-bottom: 200px;
+    }
+    
+}
+@media (max-width:1024px) {
+    .offers{
+        padding: 0px 60px;
+        margin-bottom: 80px;
+        height: 40vh;
+    }
+   
+    .offers-left h1{
+        font-size: 30px;
+    }
+    .offers-left p{
+        font-size: 16px;
+    }
+    .offers-right img{
+        width: 200px;
+    }
+    .offers-left button{
+        width: 160pxpx;
+        height: 40px;
+        font-size: 16px;
+    }
+    .offers-right{
+        padding-bottom: 200px;
+    }
+}
+@media (max-width:800px) {
+    .offers{
+        margin-bottom: 60px;
+    }
+    .offers-left{
+        padding-bottom: 200px;
+    }
+    .offers-left h1{
+        font-size: 22px;
+    }
+    .offers-left p{
+        font-size: 13px;
+    }
+    .offers-right img{
+        width: 180px;
+    }
+    .offers-left button{
+        width: 140px;
+        height: 30px;
+        font-size: 12px;
+    }   
+}
+@media (max-width:500px) {
+    .offers{
+        height: 25vh;
+        margin-bottom: 50px;
+    }
+    .offers-left{
+        padding-bottom: 200px;
+    }
+    .offers-left h1{
+        font-size: 16px;
+        padding-top: 50px;
+    }
+    .offers-left p{
+        font-size: 10px;
+    }
+    .offers-right img{
+        width: 110px;
+    }
+    .offers-left button{
+        width: 120px;
+        height: 25px;
+        font-size: 10px;
+        margin-top: 12px;
+    }   
 }
