--- a/src/Pages/CSS/LoginSignup.css
+++ b/src/Pages/CSS/LoginSignup.css
@@ -49,6 +49,7 @@
 .loginsigup-login span{
     color: #ff4141;
     font-weight: 600;
+    cursor: pointer;
 }
 .loginsingup-agree{
     display: flex;
@@ -58,4 +59,55 @@
     color: #5c5c5c;
     font-size: 18px;
     font-weight: 500;
+}
+
+@media (max-width:1280px){
+    .loginsignup{
+        padding-top: 50px;
+    }
+    .loginsignup-container{
+        width: auto;
+        max-width: 500px;
+        max-height: 500px;
+    }
+    .loginsignup-container h1{
+        margin: 10px 0px;
+    }
+    .loginsingup-fields{
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .loginsingup-fields input{
+        height: 65px;
+        width: 93%;
+    }
+    .loginsignup-container button{
+        width: 100%;
+    }
+    .loginsigup-login{
+        font-size: 16px;
+    }
+    .loginsingup-agree{
+        font-size: 14px;
+        gap: 10px;
+    } 
+}
+@media (max-width:800px) {
+    .loginsignup-container{
+        padding: 20px 30px;
+    }
+    .loginsignup-container h1{
+        font-size: 24px;
+    }
+    .loginsingup-fields{
+        margin-top: 20px;
+    }
+    .loginsingup-fields input{
+        height: 50px;
+    }
+    .loginsignup-container button{
+        height: 50px;
+        font-size: 16px;
+    }
+    
 }
